--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        height: 90vh; /* We require 100vh for all backgrounds to ensure it covers the height of the screen no matter screen size */
+        height: calc(100vh - 100px); /* We require 100vh for all backgrounds to ensure it covers the height of the screen no matter screen size */
         overflow: auto;
         padding-bottom: 100px;
   
@@ -48,10 +48,17 @@
         color: white;
     }
 
-    #obi_id {
-        background: white;
-        color: black;
+
+    /* Once warriors are loaded to the Enemy Container the background and border will be updated */
+    #enemy-container .card{
+        background: red;        
     }
+ 
+    
+    #enemy-container .border-success {
+        border: 2px solid black !important;
+    }
+
 
     .enemy-grp {
         width: 100%;
@@ -103,7 +110,7 @@
         /* position: fixed; */
         bottom: 0;
         width: 100%;
-        height: 100px;
+        height: calc(5vh + 50px);
         padding-top: 25px;
         color: white;
         overflow: hidden;
